# ViveCore

./: .gitignore  .supervive_cache.json  .supervive_cache.json.bak  102.txt  122_Full.txt  README.md  main.py  mmr.json  package-lock.json  package.json  pyproject.toml  supervive_service.py  tailwind.config.js  vite.config.ts
docs/: APIs.md
src/: App.tsx  index.css
src/components/: MatchDetail.tsx  MatchHistory.tsx  PlayerProfile.tsx  PlayerSearch.tsx
src/services/: superviveApi.ts
src/utils/: heroData.ts
supervive-gui/: Cargo.toml
supervive-gui/src/: api.rs  main.rs  state.rs
supervive-gui/src/views/: match_detail.rs  mod.rs  player.rs  root.rs  search.rs
web/: README.md  package-lock.json  package.json  test-implementation.txt
web/src/: App.css  App.tsx  index.css
web/src/components/: AbilityIcon.tsx  BuildIcon.tsx  HeroIcon.tsx  MatchesList.tsx  ProfileSearchPage.tsx  ProfileStats.tsx  SearchBar.tsx
