[package]
name = "supervive-gui"
version = "0.1.0"
edition = "2021"

[dependencies]
gpui = { version = "0.2.2", features = ["test-support"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
reqwest_client = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
dirs = "5.0"
log = "0.4"
env_logger = "0.10"
